PROJECT(ossimPlanetQt)
IF(NOT APPLE)
  cmake_minimum_required(VERSION 2.6)
ELSE(NOT APPLE)
  cmake_minimum_required(VERSION 2.8)
ENDIF(NOT APPLE)

SET(CMAKE_DEBUG_POSTFIX "d")


#INCLUDE(OssimVersion)
INCLUDE(OssimUtilities)
INCLUDE(OssimCommonVariables)
INCLUDE(OssimQt4Macros)


set( ENV{QTDIR} "${3RDPART_DIR}/${PLATFORM}/QT/4.8.1") 
SET (QT_MIN_VERSION "4.2.2")
FIND_PACKAGE(Qt4 REQUIRED) # find and setup Qt4 for this project
INCLUDE(${QT_USE_FILE})
SET(QT_USE_QTOPENGL ON)
find_package(Qt4)


ADD_DEFINITIONS(${QT_DEFINITIONS}
	-DQT_CORE_LIB
	-DQT_GUI_LIB
	-DQT_THREAD_SUPPORT
)

INCLUDE_DIRECTORIES(${${PROJECT_NAME}_SOURCE_DIR}/include
                    ${OSSIM_INCLUDE_DIR}
                    ${WMS_INCLUDE_DIR}
                    ${OSSIMPLANET_INCLUDE_DIR}
                    ${QT_INCLUDES}
                    ${OSG_INCLUDES}
                    ${CURL_INCLUDE_DIR})

LINK_DIRECTORIES(${OSG_LINK_DIR}
                 ${ZLIB_LINK_DIR}
                 ${OSG_3RDPART_LINK_DIR}
                 ${TIFF_LINK_DIR}
                 ${CURL_LINK_DIR}
                 ${GEOTIFF_LINK_DIR}
                 ${EXPAT_LINK_DIR})

IF(GPSTK_FOUND AND OSSIMPLANET_ENABLE_EPHEMERIS)
   MESSAGE(STATUS "GPSTK_LIBRARY               = ${GPSTK_LIBRARY}")
   MESSAGE(STATUS "GPSTK_INCLUDE_DIR           = ${GPSTK_INCLUDE_DIR}")
   ADD_DEFINITIONS("-DOSSIMPLANET_ENABLE_EPHEMERIS")
   INCLUDE_DIRECTORIES(${GPSTK_INCLUDE_DIR})
ELSE()
   SET(GPSTK_LIBRARY "")
ENDIF()


############################################## BUILD THE LIBRARY ############################################
SET(LIB_NAME ossimPlanetQt)
FILE(GLOB OSSIMPLANETQT_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/include/ossimPlanetQt/ossimPlanet*.h")
FILE(GLOB OSSIMPLANETQT_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/src/gui/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/src/core/*.cpp" )
FILE(GLOB OSSIMPLANETQT_UIS  "${CMAKE_CURRENT_SOURCE_DIR}/src/gui/ui/*.ui")

MESSAGE("QT4_LIBRARIES === ${QT_LIBRARIES}")
QT4_WRAP_CPP(OSSIMPLANETQT_MOC_SRCS ${OSSIMPLANETQT_INCLUDES} )

SET(UI_DESTINATION_DIR ${${PROJECT_NAME}_SOURCE_DIR}/include/ossimPlanetQt)
OSSIM_QT4_WRAP_UI(OSSIMPLANETQT_UI_SRC ${OSSIMPLANETQT_UIS} )
SET(INCLUDE_DIR "include/ossimPlanetQt")
SET (LIB_TYPE SHARED)
ADD_DEFINITIONS(-D_AFXEXT)
ADD_DEFINITIONS(-D_AFXDLL)
ADD_DEFINITIONS(-DNOMINMAX)
ADD_DEFINITIONS(-DOSSIMPLANETQT_LIBRARY)
SET (CMAKE_MFC_FLAG 0)




ADD_LIBRARY(${LIB_NAME}
            ${LIB_TYPE}
            ${OSSIMPLANETQT_SRCS}  ${OSSIMPLANETQT_MOC_SRCS} ${OSSIMPLANETQT_UIS} ${OSSIMPLANETQT_INCLUDES})


set_target_properties (${LIB_NAME} PROPERTIES COMPILE_FLAGS "/MP" )
set_target_properties (${LIB_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY  ${OUTPUT_BINDIR})
set_target_properties (${LIB_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG  ${OUTPUT_BINDIR})
set_target_properties (${LIB_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE   ${OUTPUT_BINDIR})
set_target_properties (${LIB_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY  ${OUTPUT_BINDIR})
set_target_properties (${LIB_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG  ${OUTPUT_BINDIR})
set_target_properties (${LIB_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE   ${OUTPUT_BINDIR})


TARGET_LINK_LIBRARIES(${LIB_NAME} ossimcore ossimPlanet ${OSG_LIBRARIES} ${ZLIB_LIBRARY} ${OPENGL_LIBRARIES} ${QT_LIBRARIES} ${QT_QTOPENGL_LIBRARY}  ${JPEG_LIBRARY} ${WMS_LIBRARY} ${GPSTK_LIBRARY} ${OSSIMPREDATOR_LIBRARY} )



ADD_SUBDIRECTORY(APPS)
