

############################################# BUILD THE APPLICATIONS #################################################
REMOVE_DEFINITIONS(-DOSSIMPLANETQT_LIBRARY)
QT4_ADD_RESOURCES(OSSIMPLANETQT_RC "${CMAKE_CURRENT_SOURCE_DIR}/ossimPlanetQt.qrc")
set(TARGET_COMMON_LIBRARIES ossimPlanetQt)
FILE(GLOB SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/ossimplanet/main.cpp")
SET(OSSIM_BUILD_APPLICATION_BUNDLES ON)

SET(TARGET_TARGETNAME ossimplanetGui)
ADD_EXECUTABLE(${TARGET_TARGETNAME} WIN32 ${SOURCE_FILES}  ${OSSIMPLANETQT_RC})
TARGET_LINK_LIBRARIES(${TARGET_TARGETNAME} ossimcore ossimPlanetQt)
SET_TARGET_PROPERTIES(${TARGET_TARGETNAME} PROPERTIES DEBUG_OUTPUT_NAME "ossimPlanet")
SET_TARGET_PROPERTIES(${TARGET_TARGETNAME} PROPERTIES RELEASE_OUTPUT_NAME "ossimPlanet")

#OSSIM_SETUP_APPLICATION(ossimplanetGui REQUIRE_WINMAIN_FLAG INSTALL COMPONENT_NAME ossim SOURCE_FILES ${SOURCE_FILES} ${OSSIMPLANETQT_RC})
#SET_TARGET_PROPERTIES(ossimplanetGui PROPERTIES RUNTIME_OUTPUT_NAME ossimplanet)

set_target_properties (${TARGET_TARGETNAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY  ${OUTPUT_BINDIR})
set_target_properties (${TARGET_TARGETNAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG  ${OUTPUT_BINDIR})
set_target_properties (${TARGET_TARGETNAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE   ${OUTPUT_BINDIR})
set_target_properties (${TARGET_TARGETNAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY  ${OUTPUT_BINDIR})
set_target_properties (${TARGET_TARGETNAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG  ${OUTPUT_BINDIR})
set_target_properties (${TARGET_TARGETNAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE   ${OUTPUT_BINDIR})
